--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,18 @@ services:
       - ./app:/app
     command: >
       sh -c "python manage.py runserver 0.0.0.0:8000"
+    environment:
+      - DB_HOST=db
+      - DB_NAME=app
+      - DB_USER=postgress
+      - DB_PASS=admin@theesh
+    depends_on: 
+      - db
+
+  
+  db:
+    image: postgres:10-alpine
+    environment: 
+      - POSTGRESS_DB=app
+      - POSTGRESS_USER=postgress
+      - POSTGRESS_PASSWORD=admin@theesh
