--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,13 @@ services:
     volumes: 
       - ./app:/app
     command: >
-      sh -c "python manage.py runserver 0.0.0.0:8000"
+      sh -c "python manage.py wait_for_db && 
+             python manage.py migrate &&
+             python manage.py runserver 0.0.0.0:8000"
     environment:
       - DB_HOST=db
       - DB_NAME=app
-      - DB_USER=postgress
+      - DB_USER=postgres
       - DB_PASS=admin@theesh
     depends_on: 
       - db
@@ -22,6 +24,6 @@ services:
   db:
     image: postgres:10-alpine
     environment: 
-      - POSTGRESS_DB=app
-      - POSTGRESS_USER=postgress
-      - POSTGRESS_PASSWORD=admin@theesh
+      - POSTGRES_DB=app
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=admin@theesh
